--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CajaGeneral/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CajaGeneral/Index.cshtml
@@ -8,6 +8,8 @@
     @{
         ViewBag.Title = "Index";
     }
+
+    <script src="~/Resources/js/CajaGeneral.js"></script>
     <script src="~/Resources/js/lib/jquery-1.9.1.js"></script>
     <script type="text/javascript">
         $(function () {
@@ -75,23 +77,8 @@
                     $('#tblfilterable tbody tr').show();
                 }
             });
-        });
-
-        //$("#btnConsultar").click(function () {
-        //    var form = $(this).parent("form");
-        //    form.attr('action', '<%= Url.RouteUrl(new { Controller = "CajaGeneral", Action = "Consultar" }) %>');
-        //    form.attr('method', 'post');
-        //});
+        });     
     </script>
-    <style type="text/css">
-        .col-sm-01 {
-            -webkit-box-flex: 0;
-            -ms-flex: 0 0 16.666667%;
-            flex: 0 0 16.666667%;
-            max-width: 4.666667%;
-            text-align: left;
-        }
-    </style>
 </head>
 <body style="height:100%">
     @using (Html.BeginForm("Liquidar", "CajaGeneral", FormMethod.Post))
@@ -121,7 +108,7 @@
                     <div class="card">
                         <div class="body">
                             <div class="row clearfix">
-                                <div class="col-sm-01">
+                                <div style="text-align:left; max-width:4.666667%">
                                     <b>Fecha:</b>
                                 </div>
                                 <div class="col-sm-2">
@@ -226,35 +213,24 @@
                             </div>
                         </div>
                     </div>
-                    @if (ViewBag.MessageExito != "" && ViewBag.MessageExito != null)
+                    @if (ViewBag.MessageError != null)
                 {
-
-                        <div data-notify="container" class="bootstrap-notify-container alert alert-dismissible bg-green p-r-35 animated fadeInDown"
-                             role="alert" data-notify-position="bottom-center" style="display: inline-block; margin: 0px auto; position: fixed; transition: all 0.5s ease-in-out 0s; z-index: 1031;
-                         bottom: 20px; left: 0px; right: 0px;">
-                            <a href="#" class="close" data-dismiss="alert" aria-label="close" style="position: absolute; right: 10px; top: 5px; z-index: 1033;">x</a>
-                            <span data-notify="icon"></span>
-                            <span data-notify="title"></span> <span data-notify="message">@ViewBag.MessageExito</span>
-                            <a href="#" target="_blank" data-notify="url"></a>
+                        <div class="row clearfix">
+                            <div id="divMensajeError" class="container">
+                                <div class="alert alert-danger">
+                                    <div class="alert-icon">
+                                        <i class="zmdi zmdi-block"></i>
+                                    </div>
+                                    <strong>
+                                        <label>@ViewBag.MessageError</label>
+                                    </strong>
+                                </div>
+                            </div>
                         </div>
                     }
-                    @if (ViewBag.MessageError != "" && ViewBag.MessageError != null)
-                {
-                        <div data-notify="container" class="bootstrap-notify-container alert alert-dismissible bg-red p-r-35 animated fadeInDown"
-                             role="alert" data-notify-position="bottom-center" style="display: inline-block; margin: 0px auto; position: fixed; transition: all 0.5s ease-in-out 0s; z-index: 1031;
-                         bottom: 20px; left: 0px; right: 0px;">
-                            <a href="#" class="close" data-dismiss="alert" aria-label="close" style="position: absolute; right: 10px; top: 5px; z-index: 1033;">x</a>
-                            <span data-notify="icon"></span>
-                            <span data-notify="title"></span> <span data-notify="message">@ViewBag.MessageError</span><a href="#" target="_blank" data-notify="url"></a>
-                        </div>
-                    }
-
                 </div>
             </div>
         </section>
     }
-
 </body>
-@Scripts.Render("~/Scripts/jquery-1.10.2.min.js")
-@Scripts.Render("~/Scripts/jquery-ui.js")
 </html>
