--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Clientes/EditarClienteLoc.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Clientes/EditarClienteLoc.cshtml
@@ -4,87 +4,16 @@
     ViewBag.Title = "Catálogo / Clientes / Locaciones";
 }
 
-<link rel="stylesheet" href="~/assets/plugins/jquery-datatable/dataTables.bootstrap4.min.css">
-<link rel="stylesheet" href="~/assets/plugins/bootstrap-select/css/bootstrap-select.css" />
 <script src="~/Resources/js/lib/jquery-1.9.1.js"></script>
-<style>
-    .switch {
-        position: relative;
-        display: inline-block;
-        width: 60px;
-        height: 34px;
-    }
-
-        .switch input {
-            display: none;
-        }
-
-    .slider {
-        position: absolute;
-        cursor: pointer;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        background-color: #ccc;
-        -webkit-transition: .4s;
-        transition: .4s;
-    }
-
-        .slider:before {
-            position: absolute;
-            content: "";
-            height: 26px;
-            width: 26px;
-            left: 4px;
-            bottom: 4px;
-            background-color: white;
-            -webkit-transition: .4s;
-            transition: .4s;
-        }
-
-    input:checked + .slider {
-        background-color: #2196F3;
-    }
-
-    input:focus + .slider {
-        box-shadow: 0 0 1px #2196F3;
-    }
-
-    input:checked + .slider:before {
-        -webkit-transform: translateX(26px);
-        -ms-transform: translateX(26px);
-        transform: translateX(26px);
-    }
-
-    /* Rounded sliders */
-    .slider.round {
-        border-radius: 34px;
-    }
-
-        .slider.round:before {
-            border-radius: 50%;
-        }
-</style>
+<script src="~/Resources/js/Clientes.js"></script>
+<link href="~/Resources/css/Clientes.css" rel="stylesheet" />
 <script type="text/javascript">
-
     $(document).ready(function () {
-        $('#Dir').hide();
         $("#btnRegresarIndex").click(function () {
 
             var form = $(this).parent("form");
-            form.attr('action', '<%= Url.RouteUrl(new { Controller = "Clientes", Action = "Index" }) %>');
+            form.attr('action', '<%= Url.RouteUrl(new { Controller = "Clientes", Action = "EditarLocaciones" }) %>');
             form.attr('method', 'post');
-        });
-        $("#payMethod").change(function () {
-
-            if ($(this).prop("checked") == true) {
-                $('#Dir').show();
-                $('#DirManual').hide();
-            } else {
-                $('#Dir').hide();
-                $('#DirManual').show();
-            }
         });
     });
 </script>
@@ -212,8 +141,9 @@
                                     </div>
                                     <div class="col-lg-3 col-md-3 col-sm-3">
                                         <div class="form-group">
-                                            <input type="text" name="Municipio" class="form-control" value="@ViewBag.Locaciones.Municipio"/>
+                                            <input type="text" name="Municipio" class="form-control" value="@ViewBag.Locaciones.Municipio" />
                                         </div>
+                                        @Html.ValidationMessageFor(m => m.Municipio, "", new { @class = "alert-danger" })
                                     </div>
                                 </div>
                                 <div class="row clearfix">
@@ -228,8 +158,9 @@
                                     </div>
                                     <div class="col-lg-3 col-md-3 col-sm-3">
                                         <div class="form-group">
-                                            <input type="text" name="Colonia" class="form-control" value="@ViewBag.Locaciones.Colonia"/>
+                                            <input type="text" name="Colonia" class="form-control" value="@ViewBag.Locaciones.Colonia" />
                                         </div>
+                                        @Html.ValidationMessageFor(m => m.Colonia, "", new { @class = "alert-danger" })
                                     </div>
                                     <div class="col-lg-1 col-md-1 col-sm-1">
                                         <div class="form-group">
@@ -244,6 +175,7 @@
                                         <div class="form-group">
                                             <input type="text" name="Calle" class="form-control" value="@ViewBag.Locaciones.Calle" />
                                         </div>
+                                        @Html.ValidationMessageFor(m => m.Calle, "", new { @class = "alert-danger" })
                                     </div>
                                 </div>
                                 <div class="row clearfix">
@@ -260,12 +192,13 @@
                                         <div class="form-group">
                                             <input type="text" name="NumExt" class="form-control" value="@ViewBag.Locaciones.NumExt" />
                                         </div>
+                                        @Html.ValidationMessageFor(m => m.NumExt, "", new { @class = "alert-danger" })
                                     </div>
                                     <div class="col-lg-1 col-md-1 col-sm-1">
                                         <div class="form-group">
                                             <div>
                                                 <label for="txtNume">
-                                                    Núm. Int:*
+                                                    Núm. Int:
                                                 </label>
                                             </div>
                                         </div>
@@ -288,18 +221,19 @@
                                         <div class="form-group">
                                             <input type="text" name="CodigoPostal" class="form-control" value="@ViewBag.Locaciones.CodigoPostal" />
                                         </div>
+                                        @Html.ValidationMessageFor(m => m.CodigoPostal, "", new { @class = "alert-danger" })
                                     </div>
                                 </div>
                             </div>
                             <div class="row clearfix">
                                 <div class="col-lg-5 col-md-5 col-sm-5">
                                     <div class="form-group">
-                                        <input type="submit" id="btnRegresarIndex" value="Regresar" formaction=@Url.Action("Index") class="btn btn-raised btn-primary float-left" />
+                                        <input type="submit" id="btnRegresarIndex" value="Regresar" formaction=@Url.Action("EditarLocaciones", new { id = @ViewBag.IdCliente[0].IdCliente}) class="btn btn-raised btn-primary float-left" />
                                     </div>
                                 </div>
                                 <div class="col-lg-7 col-md-7 col-sm-7">
                                     <div class="form-group">
-                                        <button class="btn btn-raised btn-primary float-right" title="Upload file"><i class="glyphicon glyphicon-open-file"></i>Actualizar</button>
+                                        <button class="btn btn-raised btn-primary float-right">Actualizar</button>
                                     </div>
                                 </div>
                             </div>
@@ -307,9 +241,21 @@
                     </div>
                 </div>
             </div>
-
-
-
+            @if (ViewBag.MessageError != null)
+                {
+                <div class="row clearfix">
+                    <div id="divMensajeError" class="container">
+                        <div class="alert alert-danger">
+                            <div class="alert-icon">
+                                <i class="zmdi zmdi-block"></i>
+                            </div>
+                            <strong>
+                                <label>@ViewBag.MessageError</label>
+                            </strong>
+                        </div>
+                    </div>
+                </div>
+            }
         </div>
     </section>
 }
