--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Clientes/EditarLocaciones.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Clientes/EditarLocaciones.cshtml
@@ -1,93 +1,22 @@
-﻿@using MVC.Presentacion.Models.Catalogos
-@model  List<ClienteLocacionMod>
-
+﻿@*@model MVC.Presentacion.Models.Catalogos.ClienteLocacionMod*@
+@using MVC.Presentacion.Models.Catalogos
+@model List<ClienteLocacionMod>
 @{
     ViewBag.Title = "Catálogo / Clientes";
 }
 
-<link rel="stylesheet" href="~/assets/plugins/jquery-datatable/dataTables.bootstrap4.min.css">
-<link rel="stylesheet" href="~/assets/plugins/bootstrap-select/css/bootstrap-select.css" />
+@*<link rel="stylesheet" href="~/assets/plugins/jquery-datatable/dataTables.bootstrap4.min.css">
+    <link rel="stylesheet" href="~/assets/plugins/bootstrap-select/css/bootstrap-select.css" />*@
 <script src="~/Resources/js/lib/jquery-1.9.1.js"></script>
-<style>
-    .switch {
-        position: relative;
-        display: inline-block;
-        width: 60px;
-        height: 34px;
-    }
-
-        .switch input {
-            display: none;
-        }
-
-    .slider {
-        position: absolute;
-        cursor: pointer;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        background-color: #ccc;
-        -webkit-transition: .4s;
-        transition: .4s;
-    }
-
-        .slider:before {
-            position: absolute;
-            content: "";
-            height: 26px;
-            width: 26px;
-            left: 4px;
-            bottom: 4px;
-            background-color: white;
-            -webkit-transition: .4s;
-            transition: .4s;
-        }
-
-    input:checked + .slider {
-        background-color: #2196F3;
-    }
-
-    input:focus + .slider {
-        box-shadow: 0 0 1px #2196F3;
-    }
-
-    input:checked + .slider:before {
-        -webkit-transform: translateX(26px);
-        -ms-transform: translateX(26px);
-        transform: translateX(26px);
-    }
-
-    /* Rounded sliders */
-    .slider.round {
-        border-radius: 34px;
-    }
-
-        .slider.round:before {
-            border-radius: 50%;
-        }
-</style>
+<script src="~/Resources/js/Clientes.js"></script>
+<link href="~/Resources/css/Clientes.css" rel="stylesheet" />
+<script src="~/assets/plugins/bootstrap-notify/bootstrap-notify.js"></script>
+<script src="~/assets/js/pages/ui/notifications.js"></script>
 <script type="text/javascript">
-
-    $(document).ready(function () {
-        $('#Dir').hide();
-        $("#btnRegresarIndex").click(function () {
-
-            var form = $(this).parent("form");
-            form.attr('action', '<%= Url.RouteUrl(new { Controller = "Clientes", Action = "Index" }) %>');
-            form.attr('method', 'post');
-        });
-        $("#payMethod").change(function () {
-
-            if ($(this).prop("checked") == true) {
-                $('#Dir').show();
-                $('#DirManual').hide();
-            } else {
-                $('#Dir').hide();
-                $('#DirManual').show();
-            }
-        });
-    });
+    var message = '@ViewBag.MessageExito';
+    if (message != '') {
+        $(window).on("load", showNotification('alert-success', message, 'top', 'center', '', ''));
+    }
 </script>
 @using (Html.BeginForm("GuardarLocaciones", "Clientes", FormMethod.Post))
 {
@@ -111,6 +40,7 @@
                                             <div>
                                                 <input id="Nombre" type="text" name="Nombre" readonly="readonly" class="form-control" value="@((ViewBag.IdCliente[0].RazonSocial=="")?ViewBag.IdCliente[0].Nombre + " " +ViewBag.IdCliente[0].Apellido1 + " " +ViewBag.IdCliente[0].Apellido2:ViewBag.IdCliente[0].RazonSocial )" />
                                                 <input type="text" name="IdCliente" hidden="hidden" value="@ViewBag.IdCliente[0].IdCliente" readonly="readonly" class="form-control" />
+                                                <input type="text" name="Orden" hidden="hidden" value="@((ViewBag.LocacionOrden!=null)?ViewBag.LocacionOrden:0)" readonly="readonly" class="form-control" />
                                             </div>
                                         </div>
                                     </div>
@@ -175,9 +105,9 @@
                                         <div class="form-group">
                                             <select id="ddlPais" name="IdPais" class="form-control selectpicker z-index show-tick">
                                                 @foreach (var lst in ViewBag.ListaPaises)
-                                                {
-                                                <option value="@lst.IdPais">@lst.Pais</option>
-                                                }
+                                                    {
+                                                    <option value="@lst.IdPais">@lst.Pais</option>
+                                                    }
                                             </select>
                                         </div>
                                     </div>
@@ -194,9 +124,9 @@
                                         <div class="form-group">
                                             <select name="IdEstadoRep" id="ddlEdo" class="form-control selectpicker z-index show-tick" data-live-search="true">
                                                 @foreach (var lst in ViewBag.ListaEstados)
-                                                {
-                                                <option value="@lst.IdEstadoRep">@lst.Estado</option>
-                                                }
+                                                    {
+                                                    <option value="@lst.IdEstadoRep">@lst.Estado</option>
+                                                    }
                                             </select>
                                         </div>
                                     </div>
@@ -213,6 +143,7 @@
                                         <div class="form-group">
                                             <input type="text" name="Municipio" class="form-control" />
                                         </div>
+                                        @Html.ValidationMessageFor(m => m[0].Municipio, "", new { @class = "alert-danger" })
                                     </div>
                                 </div>
                                 <div class="row clearfix">
@@ -229,6 +160,7 @@
                                         <div class="form-group">
                                             <input type="text" name="Colonia" class="form-control" />
                                         </div>
+                                        @Html.ValidationMessageFor(m => m[0].Colonia, "", new { @class = "alert-danger" })
                                     </div>
                                     <div class="col-lg-1 col-md-1 col-sm-1">
                                         <div class="form-group">
@@ -243,6 +175,7 @@
                                         <div class="form-group">
                                             <input type="text" name="Calle" class="form-control" />
                                         </div>
+                                        @Html.ValidationMessageFor(m => m[0].Calle, "", new { @class = "alert-danger" })
                                     </div>
                                 </div>
                                 <div class="row clearfix">
@@ -259,12 +192,13 @@
                                         <div class="form-group">
                                             <input type="text" name="NumExt" class="form-control" />
                                         </div>
+                                        @Html.ValidationMessageFor(m => m[0].NumExt, "", new { @class = "alert-danger" })
                                     </div>
                                     <div class="col-lg-1 col-md-1 col-sm-1">
                                         <div class="form-group">
                                             <div>
                                                 <label for="txtNume">
-                                                    Núm. Int:*
+                                                    Núm. Int:
                                                 </label>
                                             </div>
                                         </div>
@@ -287,13 +221,14 @@
                                         <div class="form-group">
                                             <input type="text" name="CodigoPostal" class="form-control" />
                                         </div>
+                                        @Html.ValidationMessageFor(m => m[0].CodigoPostal, "", new { @class = "alert-danger" })
                                     </div>
                                 </div>
                             </div>
                             <div class="row clearfix">
                                 <div class="col-lg-5 col-md-5 col-sm-5">
                                     <div class="form-group">
-                                        <input type="submit" id="btnRegresarIndex" value="Regresar" formaction=@Url.Action("Index") class="btn btn-raised btn-primary float-left" />
+                                        <input type="submit" id="btnRegresarIndexNC" value="Regresar" formaction=@Url.Action("Index") class="btn btn-raised btn-primary float-left" />
                                     </div>
                                 </div>
                                 <div class="col-lg-7 col-md-7 col-sm-7">
@@ -322,37 +257,36 @@
                                                 </tr>
                                             </thead>
                                             <tbody>
-                                                @*@Html.EditorFor(m => m)*@
                                                 @foreach (var item in Model)
                                                 {
-                                                <tr>
-                                                    <td>@item.Pais</td>
-                                                    @if(@item.EstadoProvincia != "" && @item.EstadoProvincia != null )
+                                                    <tr>
+                                                        <td>@item.Pais</td>
+                                                        @if (@item.EstadoProvincia != "" && @item.EstadoProvincia != null)
                                                         {
-                                                        <td>@item.EstadoProvincia</td>
+                                                            <td>@item.EstadoProvincia</td>
                                                         }
                                                         else
                                                         {
-                                                        <td>@item.Estado</td>
+                                                            <td>@item.Estado</td>
                                                         }
-                                                    <td>@item.Municipio</td>
-                                                    <td>@item.TipoLocacion</td>
-                                                    <td>@item.CodigoPostal</td>
-                                                    <td>@item.Colonia</td>
-                                                    <td>@item.Calle</td>
-                                                    <td>@item.NumInt</td>
-                                                    <td>@item.NumExt</td>
-                                                    <td>
-                                                        <a ID="lblCrear" href="@Url.Action("EditarClienteLoc", "Clientes", new { id = item.IdCliente , idOrden = item.Orden })">
-                                                            <i class="material-icons">edit</i>
-                                                            <span class="icon-name"></span>
-                                                        </a>
-                                                        <a ID="lbBorrar" href="@Url.Action("BorrarClienteLoc", "Clientes", new { id = item.IdCliente , idOrden = item.Orden })">
-                                                            <i class="material-icons">delete</i>
-                                                            <span class="icon-name"></span>
-                                                        </a>
-                                                    </td>
-                                                </tr>
+                                                        <td>@item.Municipio</td>
+                                                        <td>@item.TipoLocacion</td>
+                                                        <td>@item.CodigoPostal</td>
+                                                        <td>@item.Colonia</td>
+                                                        <td>@item.Calle</td>
+                                                        <td>@item.NumInt</td>
+                                                        <td>@item.NumExt</td>
+                                                        <td>
+                                                            <a ID="lblCrear" href="@Url.Action("EditarClienteLoc", "Clientes", new { id = item.IdCliente , idOrden = item.Orden })">
+                                                                <i class="material-icons">edit</i>
+                                                                <span class="icon-name"></span>
+                                                            </a>
+                                                            <a ID="lbBorrar" href="@Url.Action("BorrarClienteLoc", "Clientes", new { id = item.IdCliente , idOrden = item.Orden })">
+                                                                <i class="material-icons">delete</i>
+                                                                <span class="icon-name"></span>
+                                                            </a>
+                                                        </td>
+                                                    </tr>
                                                 }
                                             </tbody>
                                         </table>
@@ -363,7 +297,7 @@
                     </div>
                 </div>
             </div>
-            @if (ViewBag.MensajeError != null)
+            @if (ViewBag.MessageError != null)
                 {
                 <div class="row clearfix">
                     <div id="divMensajeError" class="container">
@@ -372,46 +306,12 @@
                                 <i class="zmdi zmdi-block"></i>
                             </div>
                             <strong>
-                                <label>@ViewBag.MensajeError</label>
+                                <label>@ViewBag.MessageError</label>
                             </strong>
                         </div>
                     </div>
                 </div>
             }
-            @*@if (ViewBag.MessageExito != "" && ViewBag.MessageExito != null)
-                {
-
-                <div data-notify="container" class="bootstrap-notify-container alert alert-dismissible bg-green p-r-35 animated fadeInDown"
-                     role="alert" data-notify-position="bottom-center" style="display: inline-block; margin: 0px auto; position: fixed; transition: all 0.5s ease-in-out 0s; z-index: 1031;
-                         bottom: 20px; left: 0px; right: 0px;">
-                    @*<button type="button" aria-hidden="true" class="close" data-notify="dismiss" style="position: absolute; right: 10px; top: 5px; z-index: 1033;">×</button>*@
-            @*<a href="#" class="close" data-dismiss="alert" aria-label="close">x</a>
-                        <span data-notify="icon"></span>
-                        <span data-notify="title"></span> <span data-notify="message">@ViewBag.MessageExito</span>
-                        <a href="#" target="_blank" data-notify="url"></a>
-                    </div>
-                }
-
-                @if (ViewBag.MessageError != "" && ViewBag.MessageError != null)
-                    {
-                    <div data-notify="container" class="bootstrap-notify-container alert alert-dismissible bg-red p-r-35 animated fadeInDown"
-                         role="alert" data-notify-position="bottom-center" style="display: inline-block; margin: 0px auto; position: fixed; transition: all 0.5s ease-in-out 0s; z-index: 1031;
-                             bottom: 20px; left: 0px; right: 0px;">
-                        @*<button type="button" aria-hidden="true" class="close" data-notify="dismiss" style="position: absolute; right: 10px; top: 5px; z-index: 1033;">×</button>*@
-            @*<a href="#" class="close" data-dismiss="alert" aria-label="close">x</a>
-                        <span data-notify="icon"></span>
-                        <span data-notify="title"></span> <span data-notify="message">@ViewBag.MessageError</span><a href="#" target="_blank" data-notify="url"></a>
-                    </div>
-                }*@
         </div>
     </section>
 }
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<script src="~/assets/bundles/datatablescripts.bundle.js"></script>
-<script src="~/assets/plugins/jquery-datatable/buttons/dataTables.buttons.min.js"></script>
-<script src="~/assets/plugins/jquery-datatable/buttons/buttons.bootstrap4.min.js"></script>
-<script src="~/assets/plugins/jquery-datatable/buttons/buttons.colVis.min.js"></script>
-<script src="~/assets/plugins/jquery-datatable/buttons/buttons.html5.min.js"></script>
-<script src="~/assets/plugins/jquery-datatable/buttons/buttons.print.min.js"></script>
-<script src="~/assets/js/pages/tables/jquery-datatable.js"></script>
