--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Empresas/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Empresas/Index.cshtml
@@ -114,8 +114,7 @@
                         </div>
                     </div>
                 </div>
-
-                @if (ViewBag.MensajeError != null)
+                @if (ViewBag.MessageError != null)
                 {
                     <div class="row clearfix">
                         <div id="divMensajeError" class="container">
@@ -124,7 +123,7 @@
                                     <i class="zmdi zmdi-block"></i>
                                 </div>
                                 <strong>
-                                    <label>@ViewBag.MensajeError</label>
+                                    <label>@ViewBag.MessageError</label>
                                 </strong>
                             </div>
                         </div>
