--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/PrecioVentaOtro/EditarPrecioVentaOtro.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/PrecioVentaOtro/EditarPrecioVentaOtro.cshtml
@@ -8,9 +8,10 @@
         ViewBag.Title = "Index";
     }
     <script src="~/Resources/js/lib/jquery-1.9.1.js"></script>
-    <script type="text/javascript">
+    <script src="~/Resources/js/PrecioVenta.js"></script>
+    @*<script type="text/javascript">
         $(document).ready(function () {
-            $("#btnRegresarIndex").click(function () {
+            $("#btnRegresarIndexPVO").click(function () {
                 var form = $(this).parent("form");
                 form.attr('action', '<%= Url.RouteUrl(new { Controller = "PrecioVentaOtro", Action = "Index" }) %>');
                 form.attr('method', 'post');
@@ -31,7 +32,7 @@
 
         });
 
-    </script>
+    </script>*@
 </head>
 <body style="height:100%">
     @using (Html.BeginForm("ActualizarPrecioVentaOtro", "PrecioVentaOtro", FormMethod.Post))
@@ -78,35 +79,11 @@
                         <div class="row clearfix">
                             <div class="col-lg-5 col-md-5 col-sm-5">
                                 <div class="form-group">
-                                    <input type="submit" value="Regresar" id="btnRegresarIndex" formaction=@Url.Action("Index") class="btn btn-raised btn-primary float-left" />
+                                    <input type="submit" value="Regresar" id="btnRegresarIndexPVO" formaction=@Url.Action("Index") class="btn btn-raised btn-primary float-left" />
                                 </div>
                             </div>
                         </div>
                     </div>
-
-                    @if (ViewBag.MessageExito != "" && ViewBag.MessageExito != null)
-                {
-
-                        <div data-notify="container" class="bootstrap-notify-container alert alert-dismissible bg-green p-r-35 animated fadeInDown"
-                             role="alert" data-notify-position="bottom-center" style="display: inline-block; margin: 0px auto; position: fixed; transition: all 0.5s ease-in-out 0s; z-index: 1031;
-                         bottom: 20px; left: 0px; right: 0px;">
-                            <a href="#" class="close" data-dismiss="alert" aria-label="close" style="position: absolute; right: 10px; top: 5px; z-index: 1033;">x</a>
-                            <span data-notify="icon"></span>
-                            <span data-notify="title"></span> <span data-notify="message">@ViewBag.MessageExito</span>
-                            <a href="#" target="_blank" data-notify="url"></a>
-                        </div>
-                    }
-                    @if (ViewBag.MessageError != "" && ViewBag.MessageError != null)
-                {
-                        <div data-notify="container" class="bootstrap-notify-container alert alert-dismissible bg-red p-r-35 animated fadeInDown"
-                             role="alert" data-notify-position="bottom-center" style="display: inline-block; margin: 0px auto; position: fixed; transition: all 0.5s ease-in-out 0s; z-index: 1031;
-                         bottom: 20px; left: 0px; right: 0px;">
-                            <a href="#" class="close" data-dismiss="alert" aria-label="close" style="position: absolute; right: 10px; top: 5px; z-index: 1033;">x</a>
-                            <span data-notify="icon"></span>
-                            <span data-notify="title"></span> <span data-notify="message">@ViewBag.MessageError</span><a href="#" target="_blank" data-notify="url"></a>
-                        </div>
-                    }
-
                 </div>
             </div>
         </section>
