--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/PrecioVentaOtro/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/PrecioVentaOtro/Index.cshtml
@@ -11,7 +11,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
     <script src="~/Resources/js/lib/jquery-1.9.1.js"></script>
-    <script type="text/javascript">
+    <script src="~/Resources/js/PrecioVenta.js"></script>
+
+    @*<script type="text/javascript">
         //$(function () {
         //    $('select').on('change', function () {
         //        $('#tblfilterable tbody tr').each(function () {
@@ -33,7 +35,7 @@
         //    });
         //});
 
-        $(document).ready(function () {
+        @*$(document).ready(function () {
             $("#txtUtilidad").keyup(function () {
 
                 var precio = $("#PrecioPMX").val();
@@ -132,7 +134,7 @@
             });
         });
 
-    </script>
+    </script>*@
 </head>
 <body style="height:100%">
     @using (Html.BeginForm("Registrar", "PrecioVentaOtro", FormMethod.Post))
@@ -325,7 +327,7 @@
                                 </div>
                             </div>
                         </div>
-                        @if (ViewBag.MensajeError != null)
+                        @if (ViewBag.MessageError != null)
                         {
                             <div class="row clearfix">
                                 <div id="divMensajeError" class="container">
@@ -334,33 +336,12 @@
                                             <i class="zmdi zmdi-block"></i>
                                         </div>
                                         <strong>
-                                            <label>@ViewBag.MensajeError</label>
+                                            <label>@ViewBag.MessageError</label>
                                         </strong>
                                     </div>
                                 </div>
                             </div>
-                        }
-                        @*@if (ViewBag.MessageExito != "" && ViewBag.MessageExito != null)
-                        {
-                            <div data-notify="container" class="bootstrap-notify-container alert alert-dismissible bg-green p-r-35 animated fadeInDown"
-                                 role="alert" data-notify-position="bottom-center" style="display: inline-block; margin: 0px auto; position: fixed; transition: all 0.5s ease-in-out 0s; z-index: 1031;
-                                bottom: 20px; left: 0px; right: 0px;">
-                                <a href="#" class="close" data-dismiss="alert" aria-label="close" style="position: absolute; right: 10px; top: 5px; z-index: 1033;">x</a>
-                                <span data-notify="icon"></span>
-                                <span data-notify="title"></span> <span data-notify="message">@ViewBag.MessageExito</span>
-                                <a href="#" target="_blank" data-notify="url"></a>
-                            </div>
-                        }
-                        @if (ViewBag.MessageError != "" && ViewBag.MessageError != null)
-                        {
-                            <div data-notify="container" class="bootstrap-notify-container alert alert-dismissible bg-red p-r-35 animated fadeInDown"
-                                 role="alert" data-notify-position="bottom-center" style="display: inline-block; margin: 0px auto; position: fixed; transition: all 0.5s ease-in-out 0s; z-index: 1031;
-                                bottom: 20px; left: 0px; right: 0px;">
-                                <a href="#" class="close" data-dismiss="alert" aria-label="close" style="position: absolute; right: 10px; top: 5px; z-index: 1033;">x</a>
-                                <span data-notify="icon"></span>
-                                <span data-notify="title"></span> <span data-notify="message">@ViewBag.MessageError</span><a href="#" target="_blank" data-notify="url"></a>
-                            </div>
-                        }*@
+                        }                   
                     </div>
                 </div>
             </div>
