--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Usuarios/Nuevo.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Usuarios/Nuevo.cshtml
@@ -12,7 +12,6 @@
 {
     <section class="content home">
         <div class="container-fluid">
-
             <div class="row clearfix">
                 <div class="col-lg-7 col-md-7 col-sm-12">
                     <h3>&nbsp;Catálogo / Usuarios</h3>
@@ -396,7 +395,7 @@
                 </div>
             </div>
 
-            @if (ViewBag.MensajeError != null)
+            @if (ViewBag.MessageError != null)
                 {
                 <div class="row clearfix">
                     <div id="divMensajeError" class="container">
@@ -405,7 +404,7 @@
                                 <i class="zmdi zmdi-block"></i>
                             </div>
                             <strong>
-                                <label>@ViewBag.MensajeError</label>
+                                <label>@ViewBag.MessageError</label>
                             </strong>
                         </div>
                     </div>
